# dmchess

./: .dev.vars.example  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  wrangler.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-18-chess-bot.md  2026-04-19-inline-png-via-dynboard.md  2026-04-19-typescript-cloudflare-rewrite.md  2026-04-22-end-game-detection.md
docs/superpowers/specs/: 2026-04-18-chess-bot-design.md  2026-04-19-inline-png-via-dynboard-design.md  2026-04-19-typescript-cloudflare-rewrite-design.md  2026-04-22-end-game-detection-design.md
src/: bot.ts  game.ts  index.ts
src/dmchess/: bot.py  game.py  main.py  rendering.py
src/rendering/: dynboard.ts  svg.ts  unicode.ts
test/: bot.test.ts  dynboard.test.ts  game.test.ts  svg.test.ts  unicode.test.ts
tests/: test_game.py  test_rendering.py
