[project]
name = "dmchess"
version = "0.1.0"
description = "A Telegram bot for playing chess with a friend."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]~=21.0",
    "chess",
    "cairosvg",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
dmchess = "dmchess.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
